colorpicker:alignment issue resolved (AMEXIO_API-2 Color Picker)

--- a/src/styles/def/component/colorpicker-structure.scss
+++ b/src/styles/def/component/colorpicker-structure.scss
@@ -5,7 +5,7 @@
   .color-wrapper {
      
     display: flex;
-     
+    padding-bottom: 0px; 
     z-index:1010;
   }
   .color-inline-picker {
